--- a/arne/.htaccess
+++ b/arne/.htaccess
@@ -20,5 +20,7 @@
 <IfModule mod_alias.c>
 	Redirect gone /favicon.ico
 	Redirect gone /robots.txt
+	Redirect gone /hotlist
 	Redirect 301 /hotlist.html http://arne.johannessen.de/hotlist
+	Redirect 307 /~joar0011/ http://www.home.hs-karlsruhe.de/~joar0011/
 </IfModule>
