--- a/arne/test/LowFriction/.htaccess
+++ b/arne/test/LowFriction/.htaccess
@@ -8,3 +8,5 @@ Redirect 303 /test/LowFriction/1.html http://arne.johannessen.de/test/LowFrictio
 Redirect 303 /test/LowFriction/1.js http://arne.johannessen.de/test/LowFriction/low-friction.js
 Redirect 303 /test/LowFriction/2.html http://arne.johannessen.de/test/LowFriction/
 Redirect 303 /test/LowFriction/2.js http://arne.johannessen.de/test/LowFriction/low-friction.js
+Redirect 301 /test/LowFriction/3.html http://arne.johannessen.de/test/LowFriction/
+Redirect 301 /test/LowFriction/3.js http://arne.johannessen.de/test/LowFriction/low-friction.js
