2012 version of the site
The main site is replaced by something that at least is somewhat
pleasant to look at. This back-dated commit contains a more or less
historically accurate copy of the version as it was at the time. Also,
the "professional" home page's repository is added as a submodule, but
the repository was not in fact synced with what was actually online at
the time.

--- a/arne/.htaccess
+++ b/arne/.htaccess
@@ -22,5 +22,5 @@
 	Redirect gone /robots.txt
 	Redirect gone /hotlist
 	Redirect 301 /hotlist.html http://arne.johannessen.de/hotlist
-	Redirect 307 /~joar0011/ http://www.home.hs-karlsruhe.de/~joar0011/
+	Redirect 301 /~raan0001/ http://www.kartographen.de/2011/20110916%20Rauner%20Nachruf%20KN%20Bearbeitung.shtml
 </IfModule>
